# vision-converter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cli/: main.py
converters/: coco_converter.py  dataset_converter.py  pascal_converter.py  pascal_voc_converter.py  yolo_converter.py
datasetconverter/: __init__.py
datasetconverter/cli/: main.py
datasetconverter/converters/: __init__.py  coco_converter.py  createml_converter.py  dataset_converter.py  labelme_converter.py  pascal_voc_converter.py  tensorflow_csv_converter.py  vgg_converter.py  yolo_converter.py
datasetconverter/formats/: __init__.py  base.py  coco.py  createml.py  labelme.py  neutral_format.py  pascal_voc.py  tensorflow_csv.py  vgg.py  yolo.py
datasetconverter/tests/: test_bbox.py  test_cli.py  test_coco.py  test_conversions.py  test_createml.py  test_file_utils.py  test_labelme.py  test_pascal.py  test_tensorflowcsv.py  test_vgg.py  test_yolo.py  utils_for_tests.py
datasetconverter/tests/test_resources/LABELME_TEST/: 1.json  10.json  18.json  5.json  7.json
datasetconverter/utils/: bbox_utils.py  file_utils.py
formats/: base.py  coco.py  neutral_format.py  pascal_voc.py  yolo.py
tests/: test_bbox.py  test_cli.py  test_coco.py  test_conversions.py  test_pascal.py  test_yolo.py
tests/test_resources/COCO_TEST/: coco_test.json
tests/test_resources/YOLO_TEST/labels/: Image0014-22-11-24-14-29-29_bmp.rf.b70d2eb172d5b42fa605a4ea63abfc03.txt  classes.txt
utils/: bbox_utils.py  file_utils.py
vision_converter/: __init__.py
vision_converter/cli/: __init__.py  main.py
vision_converter/converters/: __init__.py  coco_converter.py  createml_converter.py  labelme_converter.py  pascal_voc_converter.py  tensorflow_csv_converter.py  vgg_converter.py  yolo_converter.py
vision_converter/formats/: __init__.py  base.py  bounding_box.py  coco.py  createml.py  labelme.py  neutral_format.py  pascal_voc.py  tensorflow_csv.py  vgg.py  yolo.py
vision_converter/tests/: test_bbox.py  test_cli.py  test_coco.py  test_conversions.py  test_createml.py  test_file_utils.py  test_labelme.py  test_pascal.py  test_tensorflowcsv.py  test_vgg.py  test_yolo.py
vision_converter/tests/test_resources/CREATEML_TEST/: annotations.json
vision_converter/tests/test_resources/LABELME_TEST/: 15.json  17.json  2.json  20.json  8.json
vision_converter/tests/test_resources/TENSORFLOW_CSV_TEST/: annotations.csv
vision_converter/utils/: bbox_utils.py  file_utils.py
(+10 files in other folders)
