[project]
name = "datasetconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[project.scripts]
dconverter = "cli.main:dconverter"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"